fix: Seeker overlapping over captions menu

--- a/assets/src/css/bubble-skin.scss
+++ b/assets/src/css/bubble-skin.scss
@@ -396,6 +396,7 @@
 			width: 8em;
 			bottom: 0 !important;
 			left: 0 !important;
+			z-index: 19;
 
 			.vjs-menu-content {
 
