--- a/assets/src/css/classic-skin.scss
+++ b/assets/src/css/classic-skin.scss
@@ -414,7 +414,7 @@
 
 		.vjs-menu {
 		   background-color: #2b333f;
-		   z-index: 10;
+		   z-index: 19;
 		}
 
 		.vjs-time-control {
