--- a/assets/src/css/minimal-skin.scss
+++ b/assets/src/css/minimal-skin.scss
@@ -191,6 +191,7 @@
 
 		.video-js .vjs-menu {
 			width: 8em;
+			z-index: 19;
 
 			.vjs-menu-content {
 
